--- a/package.json
+++ b/package.json
@@ -19,22 +19,29 @@
     "@astrojs/react": "3.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fontsource-variable/inter": "^5.0.18",
     "@hono/zod-validator": "^0.2.2",
+    "@hookform/resolvers": "^3.6.0",
     "@libsql/client": "^0.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
-    "@neondatabase/serverless": "^0.9.3",
     "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.35.5",
-    "@tanstack/react-router": "^1.32.5",
+    "@tanstack/react-table": "^8.17.3",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@vercel/postgres": "^0.8.0",
     "arctic": "^1.8.1",
     "astro": "4.9.2",
     "class-variance-authority": "^0.7.0",
@@ -49,12 +56,16 @@
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "react-resizable-panels": "^2.0.19",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
