--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.35.5",
+    "@tanstack/react-router": "^1.35.6",
     "@tanstack/react-table": "^8.17.3",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
@@ -71,7 +72,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/router-vite-plugin": "^1.32.2",
+    "@tanstack/router-vite-plugin": "^1.35.4",
     "@types/bun": "^1.1.2",
     "@types/node": "^20.12.11",
     "@types/uuid": "^9.0.8",
