get item list in sidebar working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     },
     "exclude": [
       "node_modules",
-      "src/components/ui/**/*"
+      "src/components/ui"
     ],
     "noUnusedLocals": true,
   }
