--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@astrojs/check": "0.7.0",
+    "@astrojs/db": "^0.11.6",
     "@astrojs/react": "3.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
