--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "astro": "4.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.2",
     "hono": "^4.4.5",
     "lucia": "^3.2.0",
     "lucide-react": "^0.378.0",
