--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
