use react beuty dnd for packing lists

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
@@ -74,6 +75,7 @@
     "@tanstack/router-vite-plugin": "^1.39.1",
     "@types/bun": "^1.1.2",
     "@types/node": "^20.12.11",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/uuid": "^9.0.8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.1",
