--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build --remote",
     "preview": "astro preview",
     "astro": "astro",
     "check:types": "tsc --noEmit",
@@ -16,10 +16,10 @@
   },
   "dependencies": {
     "@astrojs/check": "0.7.0",
-    "@astrojs/db": "^0.11.6",
-    "@astrojs/react": "3.4.0",
+    "@astrojs/db": "^0.11.7",
+    "@astrojs/node": "^8.3.2",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.6.0",
     "@fontsource-variable/inter": "^5.0.18",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
@@ -41,7 +41,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "arctic": "^1.8.1",
-    "astro": "4.9.2",
+    "astro": "^4.11.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
