swap out beautiful dnd for updated fork

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.18",
+    "@hello-pangea/dnd": "^16.6.0",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
@@ -50,7 +51,6 @@
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
@@ -72,7 +72,6 @@
     "@tanstack/router-vite-plugin": "^1.39.1",
     "@types/bun": "^1.1.2",
     "@types/node": "^20.12.11",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/uuid": "^9.0.8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.1",
