--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@fontsource-variable/inter": "^5.0.18",
     "@hello-pangea/dnd": "^16.6.0",
     "@hono/zod-validator": "^0.2.2",
