--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "db:seed": "tsx src/api/db/seed.ts"
   },
   "dependencies": {
-    "@astrojs/check": "0.7.0",
-    "@astrojs/db": "^0.11.7",
+    "@astrojs/check": "^0.9.2",
+    "@astrojs/db": "^0.12.0",
     "@astrojs/node": "^8.3.2",
-    "@astrojs/react": "^3.6.0",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
@@ -44,7 +44,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "arctic": "^1.8.1",
-    "astro": "^4.11.5",
+    "astro": "^4.13.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
