--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
+    "@atlaskit/pragmatic-drag-and-drop-flourish": "^1.1.1",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@fontsource-variable/inter": "^5.0.18",
     "@hello-pangea/dnd": "^16.6.0",
