--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev --host",
-    "start": "astro dev",
+    "start": "node --experimental-specifier-resolution=node ./dist/server/entry.mjs",
     "build": "astro check && astro build --remote",
     "preview": "astro preview",
     "astro": "astro",
