--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.5",
+    "immer": "^10.1.1",
     "lucia": "^3.2.0",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
