--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-router": "^1.38.1",
     "@tanstack/react-table": "^8.17.3",
+    "@tanstack/react-virtual": "^3.9.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "arctic": "^1.8.1",
