--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
+    "sharp": "^0.33.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
