--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-router": "^1.38.1",
     "@tanstack/react-table": "^8.20.1",
