--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@atlaskit/pragmatic-drag-and-drop-flourish": "^1.1.1",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@fontsource-variable/inter": "^5.0.18",
-    "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@node-rs/argon2": "^1.8.3",
@@ -45,7 +44,8 @@
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-router": "^1.38.1",
     "@tanstack/react-table": "^8.20.1",
-    "@tanstack/react-virtual": "^3.9.0",
+    "@tanstack/react-virtual": "^3.10.4",
+    "@tanstack/virtual-core": "^3.10.4",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "arctic": "^1.8.1",
@@ -54,7 +54,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "drizzle-orm": "^0.31.2",
-    "hono": "^4.4.5",
     "immer": "^10.1.1",
     "lucia": "^3.2.0",
     "lucide-react": "^0.378.0",
