--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.19",
     "sharp": "^0.33.5",
     "sonner": "^1.4.41",
