--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,5 +2,5 @@
   "$schema": "https://json.schemastore.org/chrome-manifest",
   "manifest_version": 3,
   "version": "1.0",
-  "name": "Packlighter"
+  "name": "TrekReady"
 }
