--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.19",
+    "react-router-dom": "^6.26.1",
     "sharp": "^0.33.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
