--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cmdk": "^1.0.0",
     "drizzle-orm": "^0.31.2",
     "immer": "^10.1.1",
+    "jotai": "^2.9.3",
     "lucia": "^3.2.0",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
