--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@atlaskit/pragmatic-drag-and-drop-flourish": "^1.1.1",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@fontsource-variable/inter": "^5.0.18",
+    "@fontsource-variable/radio-canada": "^5.1.0",
+    "@fontsource-variable/reddit-sans": "^5.1.0",
     "@hookform/resolvers": "^3.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@node-rs/argon2": "^1.8.3",
