--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.26.1",
+    "recharts": "^2.13.3",
     "sharp": "^0.33.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
