--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/themes": "^3.1.6",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-table": "^8.20.1",
@@ -64,6 +65,8 @@
     "jotai": "^2.9.3",
     "lucia": "^3.2.0",
     "lucide-react": "^0.378.0",
+    "postcss-import": "^16.1.0",
+    "radix-themes-tw": "^0.2.3",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
